[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "pycompete"
authors = [
    {name = "Francis P Chmiel"},
]
description = "Tools to support the training and evalaution of models for the CRUNCHDAO project."
readme = "README.md"
requires-python = ">=3.7"
url = "https://github.com/FChmiel/pycompete",
keywords = ["crunchdao"]
license = {text = "MIT license"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dynamic = ["version", "dependencies"]

[project.scripts]
my-script = "my_package.module:function"


[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}