[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "pycompete"
authors = [
    {name = "Francis P Chmiel"},
]
description = "Tools to support the training and evalaution of models for the CrunchDAO project."
readme = "README.md"
requires-python = ">=3.7"
keywords = ["crunchdao"]
license = {text = "MIT license"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dynamic = ["version", "dependencies"]

[tool.setuptools]
packages = ["pycompete"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools_scm]
write_to = "pycompete/_version.py"