[metadata]
name = pycompete
description = Tools to support the training and evalaution of models for the CrunchDAO project.
long_description_content_type = text/markdown
url = https://github.com/FChmiel/pycompete
project_urls =
    Bug Tracker = https://github.com/FChmiel/pycompete/issues
    Changelog = https://github.com/FChmiel/pycompete/releases
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Intended Audience :: Developers

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    gha_python_packaging_demo = gha_python_packaging_demo.app:entry_point
